XMLtoCSV/objects/unpackaged/objects/Network_Field_Mapping_vod__c.object
<CustomObject>
    <description>Stores information of CRM fields mapping with Network fields.</description>
    <fields>
        <fullName>CRM_Field_API_Name_vod__c</fullName>
        <description>CRM field API name</description>
        <label>CRM Field API Name</label>
        <length>43</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for use in loading and migration of mapping configuration.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lookup_ID_API_Name_vod__c</fullName>
        <description>CRM lookup object ID field API name</description>
        <label>Lookup ID API Name</label>
        <length>43</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Field_Group_Values_vod__c</fullName>
        <description>Relevant only for mappings of Multi-Select Picklists to FieldGroups in Network. Holds the maximum number of values available for selection in a multi-select picklist that is mapped to a Field Group in Network.</description>
        <label>Maximum FieldGroup Values</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Field_API_Name_vod__c</fullName>
        <description>Network field API name</description>
        <label>Network Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Object_Mapping_vod__c</fullName>
        <description>Link to Network Object Mapping.</description>
        <label>Network Object Mapping</label>
        <referenceTo>Network_Object_Mapping_vod__c</referenceTo>
        <relationshipLabel>Network Field Mappings</relationshipLabel>
        <relationshipName>Network_Field_Mappings_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Object_Mapping_Reference_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to child Object Mapping</description>
        <label>Object Mapping Reference</label>
        <referenceTo>Network_Object_Mapping_vod__c</referenceTo>
        <relationshipLabel>Parent Field Mapping References</relationshipLabel>
        <relationshipName>Object_Mapping_References_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Key_vod__c</fullName>
        <description>Unique key preventing duplicate Network field mappings within the same Network Object Mapping. Composed of concatenated values of: Network_Object_Mapping_vod and 
Network_Field_API_Name_vod. Handled by trigger.</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Validation_Notes_vod__c</fullName>
        <description>Validation status description if Validation Status is &quot;Invalid&quot;</description>
        <label>Validation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status_vod__c</fullName>
        <description>Mapping validation status</description>
        <inlineHelpText>Mapping validation status</inlineHelpText>
        <label>Validation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unvalidated_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Valid_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Network Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>CRM_Field_API_Name_vod__c</columns>
        <columns>Network_Field_API_Name_vod__c</columns>
        <columns>Network_Object_Mapping_vod__c</columns>
        <columns>Object_Mapping_Reference_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NFM{000000000}</displayFormat>
        <label>Field Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Field Mappings</pluralLabel>
    <recordTypes>
        <fullName>Boolean_vod</fullName>
        <active>true</active>
        <description>CRM checkbox to a Network &apos;Boolean&apos; Reference Mapping.</description>
        <label>Boolean_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_ID_vod</fullName>
        <active>true</active>
        <description>External ID mapping.</description>
        <label>External_ID_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lookup_vod</fullName>
        <active>true</active>
        <description>CRM Lookup to Network Reference mapping.</description>
        <label>Lookup_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Name_vod</fullName>
        <active>true</active>
        <description>Mapping by field names</description>
        <label>Name_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Object_Reference_vod</fullName>
        <active>true</active>
        <description>Reference to Network Object Mapping.</description>
        <label>Object_Reference_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Picklist_vod</fullName>
        <active>true</active>
        <description>CRM Picklist to Network Reference mapping.</description>
        <label>Picklist_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type_vod</fullName>
        <active>true</active>
        <description>CRM Record Type to Network Reference mapping.</description>
        <label>Record_Type_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>